Commitig the Authentication Controller

--- a/Practice_API/appsettings.json
+++ b/Practice_API/appsettings.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "LocalDB": "Server=PARTHIBAN;Initial Catalog=PrjDashBoard;Trusted_Connection=True;MultipleActiveResultSets=True;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+    "JWTSetting": {
+      "SecurityKey": "thisismysecuritykey"
+    }
+
 }
